-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.5.1
-
None
-
Ubuntu 14.04, Qt5.5.1
-
137883f5 (qtquickcontrols)
In this page , in the second example, there is a missing close brace.
Menu {
id: recentFilesMenu
Instantiator {
model: recentFilesModel
MenuItem {
text: model.fileName
}
onObjectAdded: recentFilesMenu.insertItem(index, object)
onObjectRemoved: recentFilesMenu.removeItem(object)
}
MenuSeparator {
visible: recentFilesModel.count > 0
}
MenuItem {
text: "Clear menu"
enabled: recentFilesModel.count > 0
onTriggered: recentFilesModel.clear()
}
// <---- here
| For Gerrit Dashboard: QTBUG-51715 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 151769,2 | Doc: Add missing closing brace to a code snippet | 5.6 | qt/qtquickcontrols | Status: MERGED | +2 | 0 |