Doc: Add missing closing brace to a code snippet

And switch to use \qml instead of \code, as the snippet is valid QML.

Change-Id: I0680eb0427fd3537ab052bb20ce5d7468545ccb0
Task-number: QTBUG-51715
Reviewed-by: Nico Vertriest <nico.vertriest@theqtcompany.com>